[package]
name = "unlock_music"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
decoder = { path = "../decoder" }
eframe = { version = "*", default-features = false, features = [
    "glow",
    "accesskit",
] }
num_cpus = "*"
rfd = "*"  # File dialog
image = { version = "*", default-features = false, features = ["png"] }

thread_local = "*"
open = "*"  # For opening output directories
rayon = "*"  # Thread pooling

[build-dependencies]
winres = "*"

